# jit_aot_course

./: CMakeLists.txt  README.md  basic_block.h  bin_ops.h  context.h  control_flow.h  examples.cpp  function.h  instruction.h  loop_analyser_examples.cpp  main.cpp  program.h  src.cpp
include/: basic_block.h  bin_ops.h  call.h  cfg.h  checks.h  constant_folding.h  context.h  control_flow.h  dominated_checks.h  function.h  instruction.h  linear_order.h  liveness_analysis.h  loop_analysis.h  peephole_optimizer.h  program.h  static_inliner.h
src/: context.cpp  instruction.cpp
tests/: test_liveness.cpp  test_optimizations.cpp
